Service Interface and Impl created, UI Fixed